--- a/.github/workflows/tiobe_scan.yaml
+++ b/.github/workflows/tiobe_scan.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3-venv
+        run: sudo apt-get update && sudo apt-get install -y libpq-dev python3-venv
 
       - name: Install pipx
         run: python3 -m pip install --user pipx && python3 -m pipx ensurepath
