Test sourcing unit venv

--- a/.github/workflows/tiobe_scan.yaml
+++ b/.github/workflows/tiobe_scan.yaml
@@ -34,8 +34,8 @@ jobs:
       - name: Run tox tests to create coverage.xml
         run: tox run -e unit
 
-      - name: Add unit venv to PATH
-        run: echo "${GITHUB_WORKSPACE}/.tox/unit/bin" >> "${GITHUB_PATH}"
+      - name: Source unit venv
+        run: . "${GITHUB_WORKSPACE}/.tox/unit/bin"
 
       - name: Move results to necessary folder for TICS
         run: |
