--- a/.github/workflows/tiobe_scan.yaml
+++ b/.github/workflows/tiobe_scan.yaml
@@ -34,8 +34,8 @@ jobs:
       - name: Run tox tests to create coverage.xml
         run: tox run -e unit
 
-      - name: Source unit venv
-        run: . "${GITHUB_WORKSPACE}/.tox/unit/bin/activate"
+      - name: Install dependencies
+        run: poetry install
 
       - name: Move results to necessary folder for TICS
         run: |
