--- a/.github/workflows/tiobe_scan.yaml
+++ b/.github/workflows/tiobe_scan.yaml
@@ -28,7 +28,7 @@ jobs:
         run: |
           python3 -m venv .venv
           . .venv/bin/activate
-          pip install tox pylint flake8 pytest
+          pip install flake8 poetry pylint pytest tox
           echo PATH=$PATH >> $GITHUB_ENV
 
       - name: Run coverage tests
