--- a/.github/workflows/tiobe_scan.yaml
+++ b/.github/workflows/tiobe_scan.yaml
@@ -29,6 +29,7 @@ jobs:
           python3 -m venv .venv
           . .venv/bin/activate
           pip install flake8 poetry pylint pytest tox
+          pip install ops
           echo PATH=$PATH >> $GITHUB_ENV
 
       - name: Run coverage tests
