Install dependencies from all groups

--- a/.github/workflows/tiobe_scan.yaml
+++ b/.github/workflows/tiobe_scan.yaml
@@ -28,8 +28,8 @@ jobs:
         run: |
           python3 -m venv .venv
           . .venv/bin/activate
-          pip install flake8 juju poetry psycopg pylint pytest pytest_operator tox
-          poetry install
+          pip install flake8 poetry pylint pytest tox
+          poetry install --all-groups
           echo PATH=$PATH >> $GITHUB_ENV
 
       - name: Run coverage tests
