Add double quotes to environment variables
Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/.github/workflows/tiobe_scan.yaml
+++ b/.github/workflows/tiobe_scan.yaml
@@ -21,7 +21,7 @@ jobs:
           . .venv/bin/activate
           pip install flake8 poetry pylint pytest tox
           poetry install --all-groups
-          echo PATH=$PATH >> $GITHUB_ENV
+          echo PATH="$PATH" >> "$GITHUB_ENV"
 
       - name: Run coverage tests
         run: |
