--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,24 +88,19 @@ exclude_lines = [
 minversion = "6.0"
 log_cli_level = "INFO"
 asyncio_mode = "auto"
-markers = ["juju2", "juju3", "juju_secrets"]
-
-# Formatting tools configuration
-[tool.black]
-line-length = 99
-target-version = ["py38"]
+markers = ["juju3", "juju_secrets"]
 
 # Linting tools configuration
 [tool.ruff]
 # preview and explicit preview are enabled for CPY001
 preview = true
-target-version = "py38"
+target-version = "py310"
 src = ["src", "."]
 line-length = 99
 
 [tool.ruff.lint]
 explicit-preview-rules = true
-select = ["A", "E", "W", "F", "C", "N", "D", "I001", "B", "CPY", "RUF", "S", "SIM", "UP", "TC"]
+select = ["A", "E", "W", "F", "C", "N", "D", "I001", "B", "CPY001", "RUF", "S", "SIM", "UP", "TC"]
 extend-ignore = [
     "D203",
     "D204",
