[DPE-6964] Storage pools (#941)
* Separate storage pools

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix password rotation test

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Filter storages

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Partial fix for async replication

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix upgrade integration tests

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Add test to check new multiple storages

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix smoke test

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix temp storage path

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Add storages'descriptions

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Improve garbage storage check

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

* Fix clean-data-dir.sh

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

---------

Signed-off-by: Marcelo Henrique Neppel <marcelo.neppel@canonical.com>

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -21,8 +21,14 @@ containers:
   postgresql:
     resource: postgresql-image
     mounts:
-      - storage: pgdata
+      - storage: archive
+        location: /var/lib/postgresql/archive
+      - storage: data
         location: /var/lib/postgresql/data
+      - storage: logs
+        location: /var/lib/postgresql/logs
+      - storage: temp
+        location: /var/lib/postgresql/temp
 
 resources:
   postgresql-image:
@@ -80,9 +86,22 @@ requires:
     optional: true
 
 storage:
-  pgdata:
+  archive:
     type: filesystem
+    description: Storage mount used for holding local backups (before typically sending them to remote object storage) when relevant/needed.
+    location: /var/lib/postgresql/archive
+  data:
+    type: filesystem
+    description: Storage mount used for storing all tables, indexes, and so on (except those from temporary tablespaces).
     location: /var/lib/postgresql/data
+  logs:
+    type: filesystem
+    description: Storage mount used for storing all the logs that are part of the transactional commit path (WAL files).
+    location: /var/lib/postgresql/logs
+  temp:
+    type: filesystem
+    description: Storage mount used for storing temporary tablespaces (where typically sort operations happen).
+    location: /var/lib/postgresql/temp
 
 assumes:
   - k8s-api
