--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,7 +5,7 @@ name: Release to Charmhub
 on:
   push:
     branches:
-    - '*/edge'
+    - '16/edge'
     paths-ignore:
       - 'tests/**'
       - 'docs/**'
@@ -44,9 +44,9 @@ jobs:
     name: Release charm
     needs:
       - ci-tests
-    uses: canonical/data-platform-workflows/.github/workflows/release_charm.yaml@v32.0.0
+    uses: canonical/data-platform-workflows/.github/workflows/release_charm_edge.yaml@v32.0.0
     with:
-      channel: ${{ github.ref_name }}
+      track: 16
       artifact-prefix: ${{ needs.ci-tests.outputs.artifact-prefix }}
     secrets:
       charmhub-token: ${{ secrets.CHARMHUB_TOKEN }}
