--- a/metadata.yaml
+++ b/metadata.yaml
@@ -49,6 +49,9 @@ provides:
     interface: postgresql_async
     limit: 1
     optional: true
+  logical-replication-offer:
+    interface: postgresql_logical_replication
+    optional: true
   database:
     interface: postgresql_client
   metrics-endpoint:
@@ -59,6 +62,10 @@ provides:
 requires:
   replication:
     interface: postgresql_async
+    limit: 1
+    optional: true
+  logical-replication:
+    interface: postgresql_logical_replication
     limit: 1
     optional: true
   certificates:
